--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
 	if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js')
+  navigator.serviceWorker.register('/service-worker.js')
   .then(function(registration) {
     console.log('Registration successful, scope is:', registration.scope);
   })
