--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>My First Heading</h1>
 
 <p>My first paragraph.</p>
-
+	<button class="button">click</button>
 </body>
 
 <script type="text/javascript">
