--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ document.querySelector('.button').addEventListener('click', function(event) {
   caches.open('pages-cache-v1').then(function(cache) {
     cache.matchAll('/data.txt').then(function(response) {
       response.forEach(function(element, index, array) {
+	      debugger;
         console.log(element);
       });
     });
