--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 	    cache.match('/data.txt').then(function(response) {
 	    	return response;
 	    }).then(function(data) {
-	    	console.log(data);
+	    	data.arrayBuffer().then((buffer) => {
+			  console.log(new Uint8Array(buffer));
+			  // Uint8Array(11) [72, 101, 108, 108, 111, 32, 119, 111, 114, 108, 100]
+			});
 	    });
 	  });
 	});
