--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	    cache.match('/data.txt').then(function(response) {
 	    	return response;
 	    }).then(function(data) {
+		    debugger;
 	    	data.arrayBuffer().then((buffer) => {
 			  console.log(new Uint8Array(buffer));
 			  // Uint8Array(11) [72, 101, 108, 108, 111, 32, 119, 111, 114, 108, 100]
