--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
 
 
-	// self.addEventListener('fetch', function(event) {
-	//   event.respondWith(
-	//     caches.match(event.request).then(function(response) {
-	//       return response || fetch(event.request);
-	//     }).catch(function() {
-	//       return caches.match('/offline.html');
-	//     })
-	//   );
-	// });
+	self.addEventListener('fetch', function(event) {
+	  event.respondWith(
+	    caches.match(event.request).then(function(response) {
+	      return response || fetch(event.request);
+	    }).catch(function() {
+	      return caches.match('/offline.html');
+	    })
+	  );
+	});
 
 	// document.querySelector('.button').addEventListener('click', function(event) {
 	//   event.preventDefault();
