--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 	<h1>Dictionary Project</h1>
-	<a class="button" href="/click">click</a>
+	<a class="button" href="/data.json">click</a>
 
 	<p id="content"></p>
 </body>
