--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		event.preventDefault();
 		fetch(event.target.href)
 		  .then(function(response) {
-			document.getElementById('content').innerHTML = response['age'];
-
+		  	data = response.json();
+			document.getElementById('content').innerHTML = data['age'];
 		  });
 	});	
 </script>
