--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script async="" src="/ydn.db-is-core-e-qry-dev.js"></script>
+</head>
 <body>
 	<h1>Dictionary Project</h1>
-	<a class="button" href="/data.json">click</a>
-
+	<button class="button">Search</button>
 	<p id="content"></p>
 </body>
-
-<script type="text/javascript">
-	document.addEventListener('DOMContentLoaded', function(event) {
-		if ('serviceWorker' in navigator) {
-	  		navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
-	    		console.log('Registration successful, scope is:', registration.scope);
-	  		}).catch(function(error) {
-	    		console.log('Service worker registration failed, error:', error);
-	  		});
-		} 
-	})
-
-	document.querySelector('.button').addEventListener('click', function(event) {
-		event.preventDefault();
-		fetch(event.target.href)
-		  .then(function(response) {
-		  	data = response.json();
-			document.getElementById('content').innerHTML = data['age'];
-		  });
-	});	
-</script>
+<script async="" src="/main.js"></script>
 </html>
+
