--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<h1>Dictionary Project</h1>
 	<button class="button">Search</button>
 	<p id="content"></p>
+	<video width="320" height="240" controls autoplay>
+      		<source src="https://www.youtube.com/embed/0xSiBpUdW4E?list=PLQlmiMhI-PlbKQ6Ryrf4t7_viO_pjTc3b">
+    	</video>
 </body>
 <script async="" src="/main.js"></script>
 </html>
